--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,10 +1,12 @@
 <h1><%= @places.inspect %></h1>
 <% @places.each do |place| %>
+<div class="booyah-box col-10 offset-1">
   <div>
-    <h1><%= place.name %></h1><br />
-    <i><%= place.address %></i><br />
+    <h1><%= place.name %></h1>
+    <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
+   
   </div>
 
-  <hr />
+  
 <% end %>
