--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,14 @@
       </button>
      <a class="navbar-brand" href="#">Nomster</a>
 
+
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+           <%= link_to new_place_path, class: 'nav-link' do %>
+          <i class="fa fa-plus-circle"></i>
+          New Place
+            <% end %>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
