--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,15 @@
        
       </div>
     </nav>
+    <% if notice.present? %>
+        <p class="alert alert-info"><%= notice %></p>
+    <% end %>
+    <% if notice.present? %>
+        <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+
+
+
     <%= yield %>
   </body>
 </html>
