add login in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,21 @@
           New Place
             <% end %>
           </li>
-          <li class="nav-item">
+          <ul class="navbar-nav">
+            <% if user_signed_in? %>
+            <li class="nav-item">
+                <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+
+
             <a class="nav-link" href="#">Link</a>
-          </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to 'Sign in', new_user_session_path, class: 'nav-link' %>
+                </li>
+              <li class="nav-item">
+              <%= link_to 'Sign up', new_user_registration_path, class: 'nav-link' %>
+               </li>
+            <% end %>
           
         </ul>
        
