--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -8,5 +8,10 @@
    <br />
     <%=  f.submit :'Create', class: 'btn btn-primary' %>
 
+    <div class="booyah-box col-10 offset-1">
+    	<h1>Add post</h1>
+ 
+		<%= render 'form', post: @post %>
+
   <% end %>
   </div>
