--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -102,7 +102,18 @@
     </div>
   <% end %>
 </div>
-      
+
+<%= link_to 'All places', places_path %>
+<h1><%= @place.title %></h1>
+ 
+<%= picture_tag(@place.picture.url, alt: 'Picture') if @place.picture? %>
+ 
+<p><%= @picture.body %></p>
+ 
+<p><%= link_to 'Edit', edit_place_path(@place) %></p>
+
+
+
     
     
 
